<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:contentDescription="@string/logo_dicoding_content_desc"
        android:id="@+id/img_logo"
        android:transitionName="logo"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:src="@drawable/dicoding_svg"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_log_title"
        android:transitionName="title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:fontFamily="sans-serif-condensed"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_log_desc"
        android:transitionName="description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_title"/>

    <TextView
        android:id="@+id/tv_log_email"
        android:transitionName="email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_desc"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_email"
        android:transitionName="email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_email">

        <com.belajar.storyapp.customview.EmailEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_log_password"
        android:transitionName="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_password"
        android:transitionName="password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_password">

        <com.belajar.storyapp.customview.PasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/red"
        android:text="@string/error_login"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="11sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_password"/>


    <Button
        android:id="@+id/btn_log_login"
        android:transitionName="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <View
        android:id="@+id/line_start"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or"
        app:layout_constraintBottom_toBottomOf="@+id/tv_or"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_login"/>

    <View
        android:id="@+id/line_end"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@+id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"/>

    <com.belajar.storyapp.customview.ButtonOutline
        android:id="@+id/btn_guest"
        android:transitionName="guest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/guest"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"/>
    
    
    <TextView
        android:id="@+id/tv_register_here"
        android:transitionName="account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="12sp"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_register_here"
        android:transitionName="account2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:textColor="@color/blue_link"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="12sp"
        android:background="@android:color/transparent"
        android:text="@string/register_here"
        app:layout_constraintBottom_toBottomOf="@id/tv_register_here"
        app:layout_constraintTop_toTopOf="@+id/tv_register_here"
        app:layout_constraintStart_toEndOf="@+id/tv_register_here"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>