<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_map_option"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="always"
        android:title="@string/maps" />

    <item
        android:id="@+id/btn_setting"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom"
        android:title="@string/setting" />

</menu>