...
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        tools:alpha="1"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toStartOf="@+id/menu_2"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:srcCompat="@drawable/outline_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
...
